# python-laberinto

./: .gitignore  LICENSE  README.md  build.ps1  laberinto.bat  leame.md  pyproject.toml
.github/workflows/: test.yml
docs/: maze-visualizer.html
maze_pdf/: __main__.py  cli.py  generator.py  opener.py  presets.py  renderer.py
openspec/changes/maze-pdf-generator/: design.md  proposal.md  tasks.md
openspec/changes/maze-pdf-generator/specs/cli-menu/: spec.md
openspec/changes/maze-pdf-generator/specs/maze-generation/: spec.md
openspec/changes/maze-pdf-generator/specs/pdf-rendering/: spec.md
openspec/changes/maze-pdf-generator/specs/preset-configuration/: spec.md
tests/: test_cli.py  test_generator.py  test_presets.py  test_renderer.py
