[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maze-pdf"
version = "0.1.0"
description = "CLI que genera laberintos imprimibles en PDF."
readme = "leame.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "waltherhuanca" }]
dependencies = [
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
build = [
    "pyinstaller>=6",
]

[project.scripts]
laberinto = "maze_pdf.cli:main"

[tool.setuptools.packages.find]
include = ["maze_pdf*"]
exclude = ["tests*", "openspec*"]
